# Geometry

./: .gitignore  CMakeLists.txt  CoordinateSystem.h  Geometry2D.h  GeometryApp.h  GeometryMaster.h  README.md  Renderer.h  UI.h  UserInputs.h  Window.h  app.cpp  is_iterable.h  main.cpp  test.cpp
Geometry/: Comparator.h  Data.h  Line.h  Matrix.h  Plane.h  Point.h  Segment.h  Vector.h  Void.h
GeometryEntities/: BoundaryBox.h  Comparator.h  Data.h  Entities.h  GeometricEntity.h  Line.h  Matrix.h  Plane.h  Point.h  Segment.h  Transform.h  Vector.h  Void.h
GeometryEntities/Splines/: BezierCurve.h  CanonicalBezierCurve.h  CanonicalSpline.h
ImGui/: CMakeLists.txt
ImGui/Imp/: imgui-SFML.cpp
Splines/: BezierCurve.h  BezierHelper.h  CanonicalBezierCurve.h  Spline.h
Tools/: Tool.h  Tools.h
Tools/Construct/: ConstructMidpoint.h  ConstructProjection.h
Tools/Create/: CreateLineTool.h  CreatePointTool.h  CreateSegmentTool.h
Tools/Inspect/: InspectDeleteTool.h  InspectMoveTool.h  InspectNavigateTool.h
